@@ -13,6 +13,35 @@ use namespace::autoclean;
 
 =cut
 
+has _ourpkgversion => (
+    is => 'ro', isa => 'Dist::Zilla::Plugin::OurPkgVersion',
+    lazy => 1,
+    default => sub {
+        my $self = shift;
+        require Dist::Zilla::Plugin::OurPkgVersion;
+        Dist::Zilla::Plugin::OurPkgVersion->new(
+            zilla => $self->zilla,
+            plugin_name => 'fallback version munger, via [RewriteVersion::Transitional]',
+        );
+    },
+    predicate => '_used_ourpkgversion',
+);
+has _pkgversion => (
+    is => 'ro', isa => 'Dist::Zilla::Plugin::PkgVersion',
+    lazy => 1,
+    default => sub {
+        my $self = shift;
+        require Dist::Zilla::Plugin::PkgVersion;
+        Dist::Zilla::Plugin::PkgVersion->new(
+            zilla => $self->zilla,
+            plugin_name => 'fallback version munger, via [RewriteVersion::Transitional]',
+            die_on_existing_version => 1,
+            die_on_line_insertion => 0,
+        );
+    },
+    predicate => '_used_pkgversion',
+);
+
 sub insert_version
 {
     my ($self, $file, $version) = @_;
@@ -25,13 +54,7 @@ sub insert_version
     my $content;
     if ($file->content =~ /# VERSION/)
     {
-        require Dist::Zilla::Plugin::OurPkgVersion;
-        my $ourpkgversion = Dist::Zilla::Plugin::OurPkgVersion->new(
-            zilla => $self->zilla,
-            plugin_name => 'fallback version munger, via [RewriteVersion::Transitional]',
-        );
-
-        $ourpkgversion->munge_file($file);
+        $self->_ourpkgversion->munge_file($file);
         $content = $file->content;
         my $trial = $self->zilla->is_trial;
         $content =~ s/ # TRIAL VERSION/ # TRIAL/mg if $trial;
@@ -39,15 +62,7 @@ sub insert_version
     }
     else
     {
-        require Dist::Zilla::Plugin::PkgVersion;
-        my $pkgversion = Dist::Zilla::Plugin::PkgVersion->new(
-            zilla => $self->zilla,
-            plugin_name => 'fallback version munger, via [RewriteVersion::Transitional]',
-            die_on_existing_version => 1,
-            die_on_line_insertion => 0,
-        );
-
-        $pkgversion->munge_perl($file);
+        $self->_pkgversion->munge_perl($file);
         $content = $file->content;
         $content =~ s/^\$\S+::(VERSION = '$version';)/our \$$1/mg;
     }
@@ -60,5 +75,18 @@ sub insert_version
 
     return 1;
 }
+
+around dump_config => sub
+{
+    my ($orig, $self) = @_;
+    my $config = $self->$orig;
+
+    $config->{'Dist::Zilla::Plugin::OurPkgVersion'} = $self->_ourpkgversion->dump_config
+        if $self->_used_ourpkgversion;
+    $config->{'Dist::Zilla::Plugin::PkgVersion'} = $self->_pkgversion->dump_config
+        if $self->_used_pkgversion;
+
+    return $config;
+};
 
 1;
